remoção do node modules e adição do gitignore
