# routes/user.js
@@ -4,50 +4,87 @@ const router = require("express").Router();
 const User = require("../models/user");
 const { registerValidation, loginValidation } = require("../validation");
 
-//GET ALL
-router.get("/", (req, res) => {
-  user
-    .find()
-    .then((data) => {
-      res.send(data);
-    })
-    .catch((e) => {
-      res.status(500).send({ message: e.message });
-    });
+/**
+ * @openai
+ * '/register':
+ *  post:
+ *    tag:
+ *       - Registro
+ *        Operação de registro de usuario 
+ * 
+ */
+router.post("/register", async (req, res) => {
+  const { error } = registerValidation(req.body);
+
+  if (error) {
+    return res.status(400).json({ error: error.details[0].message });
+  }
+
+  const emailExist = await User.findOne({ email: req.body.email });
+
+  if (emailExist) {
+    return res.status(400).json({ error: "Email already exists" });
+  }
+
+  //Encriptando a senha
+  const salt = await bcrypt.genSalt(10);
+  const pwd = await bcrypt.hash(req.body.pwd, salt);
+
+  const user = new User({
+    name: req.body.name,
+    email: req.body.email,
+    pwd,
+    date: Date.now(),
+  });
+
+  try {
+    const savedUser = await user.save();
+    res.json({ error: null, data: savedUser._id });
+  } catch (error) {
+    res.status(400).json({ error });
+  }
 });
 
-//GET SINGLE
-router.get("/:id", (req, res) => {
-  user
-    .findById(req.params.id)
-    .then((data) => {
-      res.send(data);
-    })
-    .catch((e) => {
-      res.status(500).send({ message: "Usuario não encontrado" });
-    });
+router.post("/login", async (req, res) => {
+  const { error } = loginValidation(req.body);
+
+  if (error) {
+    return res.status(400).json({ error: error.details[0].message });
+  }
+
+  const user = await User.findOne({ email: req.body.email });
+
+  if (!user) {
+    return res.status(400).json({ error: "Email não encontrado" });
+  }
+
+  const validPassword = await bcrypt.compare(req.body.pwd, user.pwd);
+
+  if (!validPassword) {
+    return res.status(400).json({ error: "Senha não coincide" });
+  }
+
+  const token = jwt.sign(
+    {
+      name: user.name,
+      id: user._id,
+    },
+    process.env.TOKEN_SECRET,
+    { expiresIn: process.env.JWT_EXPIRES_IN }
+  );
+
+  res.header("auth-token", token).json({
+    error: null,
+    data: { token },
+  });
 });
 
-//CREATE
-router.post("/", (req, res) => {
-  data = req.body;
-
-  user
-    .insertMany(data)
-    .then((data) => {
-      res.send(data);
-    })
-    .catch((e) => {
-      res.status(500).send({ message: e.message });
-    });
-});
 
 //UPDATE
 router.put("/:id", (req, res) => {
   const id = req.params.id;
 
-  user
-    .findByIdAndUpdate(id, req.body)
+  User.findByIdAndUpdate(id, req.body)
     .then((data) => {
       if (!data) {
         res.status(404).send({ message: "Usuario não encontrado" });
@@ -76,81 +113,6 @@ router.delete("/:id", (req, res) => {
     .catch((e) => {
       res.status(500).send({ message: "Erro ao excluir: " + e.message });
     });
-});
-
-router.post("/register", async (req, res) => {
-  //validate user inputs (name, email, password)
-  const { error } = registerValidation(req.body);
-
-  if (error) {
-    return res.status(400).json({ error: error.details[0].message });
-  }
-
-  //check if email is already registeret
-  const emailExist = await User.findOne({ email: req.body.email });
-
-  if (emailExist) {
-    return res.status(400).json({ error: "Email already exists" });
-  }
-
-  //hash password
-  const salt = await bcrypt.genSalt(10);
-  const password = await bcrypt.hash(req.body.password, salt);
-
-  //create user o bject and save it in Mongo (via try-catch)
-  const user = new User({
-    name: req.body.name,
-    email: req.body.email,
-    password,
-  });
-
-  try {
-    const savedUser = await user.save(); //save user
-    res.json({ error: null, data: savedUser._id });
-  } catch (error) {
-    res.status(400).json({ error });
-  }
-});
-
-router.post("/login", async (req, res) => {
-  //validate user login info
-  const { error } = loginValidation(req.body);
-
-  if (error) {
-    return res.status(400).json({ error: error.details[0].message });
-  }
-
-  //if login info is valid find the user
-  const user = await User.findOne({ email: req.body.email });
-
-  //throw error if email is wrong - user does not exist in DB
-  if (!user) {
-    return res.status(400).json({ error: "Email is wrong" });
-  }
-
-  //check for password correctness
-  const validPassword = await bcrypt.compare(req.body.password, user.password);
-
-  //throw error if password is wrong
-  if (!validPassword) {
-    return res.status(400).json({ error: "Password is wrong" });
-  }
-
-  //create authentication token with username and id
-  const token = jwt.sign(
-    //payload data
-    {
-      name: user.name,
-      id: user._id,
-    },
-    process.env.TOKEN_SECRET,
-    { expiresIn: process.env.JWT_EXPIRES_IN }
-  );
-
-  res.header("auth-token", token).json({
-    error: null,
-    data: { token },
-  });
 });
 
 module.exports = router;
